--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                 event.preventDefault();
                 const newItem = $('#itemInput').val().trim();
                 if (newItem !== '') {
-                    $('#itemList').append('<li class="list-group-item">' + newItem + ' <i class="fas fa-check mt-2"></i> <i class="fas fa-trash mt-1"></i> </li>');
+                    $('#itemList').append('<li class="list-group-item">' + newItem + ' <i class="fas fa-check"></i> <i class="fas fa-trash"></i> </li>');
                     $('#itemInput').val('');
                 }
             });
